--- a/Projeto_01/login.html
+++ b/Projeto_01/login.html
@@ -14,7 +14,7 @@
         <div class="login_form">
 
             <div class="image">
-                <img src="Images/Logotipo(black mode).png">    
+                <img src="Images/Logotipo(black mode).png" onClick="location.href='main.php'">    
             </div>
             <form class="login_inputs" action="login_validation.php" method="POST">
                 <h1> Login </h1>
